new file:   WebXML/Douban.ipynb 	modified:   WebXML/Weather.ipynb

--- a/WebXML/Weather.ipynb
+++ b/WebXML/Weather.ipynb
@@ -58,6 +58,26 @@
    "source": [
     "city_weather = client.service.getWeather(\"1533\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "suds.sudsobject.ArrayOfString"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_weather)"
+   ]
   }
  ],
  "metadata": {
