--- a/WebXML/Weather.ipynb
+++ b/WebXML/Weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,20 +34,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "attribute (IsDataSet) type, not-found\n",
-      "attribute (UseCurrentLocale) type, not-found\n"
-     ]
+     "data": {
+      "text/plain": [
+       "黑龙江,3113"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_dataset_cq = client.service.getSupportCityDataset(theRegionCode='311104')"
+    "region_province['string'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_province = {}\n",
+    "for p in region_province['string']:\n",
+    "    key, value = p.split(',')\n",
+    "    dict_province[key] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'311104'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_province['重庆']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "巴南"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_dataset_cq.diffgram.Region.City[0]['CityName']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(City){\n",
+       "   _id = \"City1\"\n",
+       "   _rowOrder = \"0\"\n",
+       "   CityID = \"1601\"\n",
+       "   CityName = \"巴南\"\n",
+       " }"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_dataset_cq.diffgram.Region.City[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(dict_city))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_city = {}\n",
+    "for city in city_dataset_cq.diffgram.Region.City:\n",
+    "    dict_city[city['CityName']] = city['CityID']"
    ]
   },
   {
@@ -76,7 +186,308 @@
     }
    ],
    "source": [
-    "type(city_weather)"
+    "from time import sleep\n",
+    "import json\n",
+    "dict_province_city = {}\n",
+    "#获取省份代码列表\n",
+    "region_province = client.service.getRegionProvince()\n",
+    "dict_province = {}\n",
+    "for p in region_province['string']:\n",
+    "    #p_name:省份名；region_code:代码\n",
+    "    p_name, region_code = p.split(',')\n",
+    "    dict_province[p_name] = region_code\n",
+    "    #获取各省城市代码\n",
+    "    city_dataset = client.service.getSupportCityDataset(theRegionCode=region_code)\n",
+    "    dict_city = {}\n",
+    "    if type(city_dataset.diffgram.Region.City) is list:\n",
+    "        for city in city_dataset.diffgram.Region.City:\n",
+    "            dict_city[city['CityName']] = city['CityID']\n",
+    "    else:\n",
+    "        city = city_dataset.diffgram.Region.City\n",
+    "        dict_city[city['CityName']] = city['CityID']\n",
+    "    dict_province_city[p_name] = dict_city\n",
+    "with open('province_city.json', 'w') as f:\n",
+    "    json.dump(dict_province_city, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_province_city.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'澳门'}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_province.keys() - dict_province_city.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'311202'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_province['澳门']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_weather = client.service.getWeather(\"1597\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1597"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_province_city['重庆']['渝北']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "suds.sudsobject.City"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_dataset.diffgram.Region.City)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_dataset.diffgram.Region.City) is list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_dataset_cq.diffgram.Region.City)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_dataset_cq.diffgram.Region.City) is list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(city_dataset_cq.diffgram.Region.City) == list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('province_city.json', 'r') as f:\n",
+    "    dc = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1092'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dc['四川']['中江']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#根据省份、城市获取天气\n",
+    "province = '重庆'\n",
+    "city = '渝北'\n",
+    "with open('province_city.json', 'r') as f:\n",
+    "    dict_province_city = json.load(f)\n",
+    "city_region_code = dict_province_city[province][city]\n",
+    "city_weather = client.service.getWeather(city_region_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "紫外线指数：最弱，辐射弱，涂擦SPF8-12防晒护肤品。\n",
+       "健臻·血糖指数：不易波动，天气条件不易引起血糖波动。\n",
+       "感冒指数：易发，昼夜温差大，湿度大，注意防护。\n",
+       "穿衣指数：较冷，建议着厚外套加毛衣等服装。\n",
+       "洗车指数：不宜，有雨，雨水和泥水会弄脏爱车。\n",
+       "空气污染指数：良，气象条件有利于空气污染物扩散。"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_weather.string[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'cat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-94-d8ff0a18e91f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m'abc'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'efg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'cat'"
+     ]
+    }
+   ],
+   "source": [
+    "'abc'.cat('efg')"
    ]
   }
  ],
