modified:   WebXML/Douban.ipynb

--- a/WebXML/Douban.ipynb
+++ b/WebXML/Douban.ipynb
@@ -2070,6 +2070,20 @@
     "\n",
     "count_by_year.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.font_manager import FontProperties\n",
+    "\n",
+    "names = ['Ranking', 'Title', 'Original_title', 'Other_title', 'Director', 'Stars', 'Year', 'Country', 'Genres', 'Rating', 'Rating_times', 'Inq']\n",
+    "df_movies = pd.read_csv('movie_info_top250.csv', index_col=0, names=names)"
+   ]
   }
  ],
  "metadata": {
