modified:   Basic/tips.ipynb

--- a/Basic/tips.ipynb
+++ b/Basic/tips.ipynb
@@ -28,6 +28,98 @@
     "df['涨跌'] = np.sign(df['p_change']) \n",
     "df['涨跌'].replace([-1,0,1], ['跌','平','涨'], inplace = True) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from django.http import HttpResponse\n",
+    "from django.views.decorators.csrf import csrf_exempt\n",
+    "from django.views.generic.base import View\n",
+    "from lxml import etree\n",
+    "from django.utils.encoding import smart_str\n",
+    "import hashlib\n",
+    "import time\n",
+    "from django.template.loader import render_to_string\n",
+    "from django.views.decorators.csrf import ensure_csrf_cookie\n",
+    "\n",
+    "# Create your views here.\n",
+    "\n",
+    "\n",
+    "#csrf_exempt装饰器是取消Django的csrf标记的，毕竟微信不会有这种标记。这次认证通过之后，这个方法你注销了都行，除非你再次认证，不然不会再使用这个方法了。\n",
+    "@csrf_exempt\n",
+    "#如果request提供，它必须是一个HttpRequest。然后，引擎必须将其以及模板中可用的CSRF令牌。\n",
+    "@ensure_csrf_cookie\n",
+    "\n",
+    "def weixin(request):\n",
+    "\n",
+    "    if request.method == 'GET':\n",
+    "        #下面这四个参数是在接入时，微信的服务器发送过来的参数\n",
+    "        signature = request.GET.get('signature', None)\n",
+    "        timestamp = request.GET.get('timestamp', None)\n",
+    "        nonce = request.GET.get('nonce', None)\n",
+    "        echostr = request.GET.get('echostr', None)\n",
+    "\n",
+    "        #这里的token需要自己设定，主要是和微信的服务器完成验证使用\n",
+    "        token = 'WEIXIN_TOKEN'\n",
+    "\n",
+    "        #把token，timestamp, nonce放在一个序列中，并且按字符排序\n",
+    "        hashlist = [token, timestamp, nonce]\n",
+    "        hashlist.sort()\n",
+    "\n",
+    "        #将上面的序列合成一个字符串\n",
+    "        hashstr = ''.join([s for s in hashlist])\n",
+    "\n",
+    "        #通过python标准库中的sha1加密算法，处理上面的字符串，形成新的字符串。\n",
+    "        hashstr = hashlib.sha1(hashstr.encode(encoding='utf-8')).hexdigest()\n",
+    "\n",
+    "        #把我们生成的字符串和微信服务器发送过来的字符串比较，\n",
+    "        #如果相同，就把服务器发过来的echostr字符串返回去\n",
+    "        if hashstr == signature:\n",
+    "          return HttpResponse(echostr)\n",
+    "\n",
+    "    if request.method == 'POST':\n",
+    "        #将程序中字符输出到非 Unicode 环境（比如 HTTP 协议数据）时可以使用 smart_str 方法\n",
+    "        data = smart_str(request.body)\n",
+    "        print(data)\n",
+    "        #将接收到数据字符串转成xml\n",
+    "        xml = etree.fromstring(data)\n",
+    "\n",
+    "        #从xml中读取我们需要的数据。注意这里使用了from接收的to，使用to接收了from，\n",
+    "        #这是因为一会我们还要用这些数据来返回消息，这样一会使用看起来更符合逻辑关系\n",
+    "        fromUser = xml.find('ToUserName').text\n",
+    "        toUser = xml.find('FromUserName').text\n",
+    "        msgType = xml.find('MsgType').text\n",
+    "\n",
+    "        #这里获取当前时间的秒数，time.time()取得的数字是浮点数，所以有了下面的操作\n",
+    "        nowtime = str(int(time.time()))\n",
+    "\n",
+    "        #加载text.xml模板,参见render()调用render_to_string()并将结果馈送到 HttpResponse适合从视图返回的快捷方式 。\n",
+    "        if msgType =='text':\n",
+    "            content = xml.find('Content').text\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '文本消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='image':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '图片消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='voice':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '语音消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='video':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '视频消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='shortvideo':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '小视频消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='location':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '地理位置消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)\n",
+    "        if msgType =='link':\n",
+    "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '链接消息，功能正在开发中'})\n",
+    "            return HttpResponse(rendered)"
+   ]
   }
  ],
  "metadata": {
