modified:   Basic/tips.ipynb

--- a/Basic/tips.ipynb
+++ b/Basic/tips.ipynb
@@ -120,6 +120,42 @@
     "            rendered = render_to_string('wechat/text.xml',{'toUser': toUser,'fromUser': fromUser,'nowtime': nowtime,'content': '链接消息，功能正在开发中'})\n",
     "            return HttpResponse(rendered)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TestUrlOpen():\n",
+    "  import urllib.request\n",
+    "  page = urllib.request.urlopen(\"http://www.webxml.com.cn/WebServices/WeatherWebService.asmx/getWeatherbyCityName?theCityName=58367\")\n",
+    "  lines = page.readlines()\n",
+    "  page.close()\n",
+    "  document = \"\"\n",
+    "  for line in lines :\n",
+    "    document = document + line.decode('utf-8')\n",
+    "\n",
+    "  from xml.dom.minidom import parseString\n",
+    "  dom =parseString(document)\n",
+    "  strings = dom.getElementsByTagName(\"string\")\n",
+    "  print (strings[6].childNodes[0].data + \" \" + strings[7].childNodes[0].data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TestSuds() :\n",
+    "  from suds import WebFault\n",
+    "  from suds.client import Client \n",
+    "  url = 'http://webservice.webxml.com.cn/WebServices/WeatherWS.asmx?WSDL'\n",
+    "  client = Client(url)\n",
+    "  print (client)\n",
+    "  print (client.service.getWeather('58367'))"
+   ]
   }
  ],
  "metadata": {
