modified:   Basic/tips.ipynb 	modified:   ETC/VIN.ipynb

--- a/Basic/tips.ipynb
+++ b/Basic/tips.ipynb
@@ -176,6 +176,135 @@
    "source": [
     "500/0.003/10000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Action: ANTITRUST TOMATOES, CLUELESS BUCKET; Animation: CLASH FREDDY, INCH JET, SNOWMAN ROLLERCOASTER; Children: CABIN FLASH, LEGALLY SECRETARY, MODEL FISH, SPLENDOR PATTON; Classics: GALAXY SWEETHEARTS, STEEL SANTA; Comedy: GROUNDHOG UNCUT, LIFE TWISTED, LION UNCUT; Documentary: HOMEWARD CIDER, METAL ARMAGEDDON, WEDDING APOLLO; Drama: TORQUE BOUND; Family: LOLITA WORLD, SPLASH GUMP; Foreign: FRIDA SLIPPER; Games: GRINCH MASSAGE, MOONWALKER FOOL; Horror: MOTIONS DETAILS, ZHIVAGO CORE; Music: ALONE TRIP, REBEL AIRPORT; New: ATTRACTION NEWTON, CHINATOWN GLADIATOR; Sci-Fi: DAISY MENAGERIE, SOLDIERS EVOLUTION; Sports: DRIVER ANNIE, RIDER CADDYSHACK; Travel: BOONDOCK BALLROOM, LEATHERNECKS DWARFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actor_info = 'Action: ANTITRUST TOMATOES, CLUELESS BUCKET; Animation: CLASH FREDDY, INCH JET, SNOWMAN ROLLERCOASTER; Children: CABIN FLASH, LEGALLY SECRETARY, MODEL FISH, SPLENDOR PATTON; Classics: GALAXY SWEETHEARTS, STEEL SANTA; Comedy: GROUNDHOG UNCUT, LIFE TWISTED, LION UNCUT; Documentary: HOMEWARD CIDER, METAL ARMAGEDDON, WEDDING APOLLO; Drama: TORQUE BOUND; Family: LOLITA WORLD, SPLASH GUMP; Foreign: FRIDA SLIPPER; Games: GRINCH MASSAGE, MOONWALKER FOOL; Horror: MOTIONS DETAILS, ZHIVAGO CORE; Music: ALONE TRIP, REBEL AIRPORT; New: ATTRACTION NEWTON, CHINATOWN GLADIATOR; Sci-Fi: DAISY MENAGERIE, SOLDIERS EVOLUTION; Sports: DRIVER ANNIE, RIDER CADDYSHACK; Travel: BOONDOCK BALLROOM, LEATHERNECKS DWARFS';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Action: ANTITRUST TOMATOES, CLUELESS BUCKET; Animation: CLASH FREDDY, INCH JET, SNOWMAN ROLLERCOASTER; Children: CABIN FLASH, LEGALLY SECRETARY, MODEL FISH, SPLENDOR PATTON; Classics: GALAXY SWEETHEARTS, STEEL SANTA; Comedy: GROUNDHOG UNCUT, LIFE TWISTED, LION UNCUT; Documentary: HOMEWARD CIDER, METAL ARMAGEDDON, WEDDING APOLLO; Drama: TORQUE BOUND; Family: LOLITA WORLD, SPLASH GUMP; Foreign: FRIDA SLIPPER; Games: GRINCH MASSAGE, MOONWALKER FOOL; Horror: MOTIONS DETAILS, ZHIVAGO CORE; Music: ALONE TRIP, REBEL AIRPORT; New: ATTRACTION NEWTON, CHINATOWN GLADIATOR; Sci-Fi: DAISY MENAGERIE, SOLDIERS EVOLUTION; Sports: DRIVER ANNIE, RIDER CADDYSHACK; Travel: BOONDOCK BALLROOM, LEATHERNECKS DWARFS'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actor_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Action: ANTITRUST TOMATOES, CLUELESS BUCKET',\n",
+       " ' Animation: CLASH FREDDY, INCH JET, SNOWMAN ROLLERCOASTER',\n",
+       " ' Children: CABIN FLASH, LEGALLY SECRETARY, MODEL FISH, SPLENDOR PATTON',\n",
+       " ' Classics: GALAXY SWEETHEARTS, STEEL SANTA',\n",
+       " ' Comedy: GROUNDHOG UNCUT, LIFE TWISTED, LION UNCUT',\n",
+       " ' Documentary: HOMEWARD CIDER, METAL ARMAGEDDON, WEDDING APOLLO',\n",
+       " ' Drama: TORQUE BOUND',\n",
+       " ' Family: LOLITA WORLD, SPLASH GUMP',\n",
+       " ' Foreign: FRIDA SLIPPER',\n",
+       " ' Games: GRINCH MASSAGE, MOONWALKER FOOL',\n",
+       " ' Horror: MOTIONS DETAILS, ZHIVAGO CORE',\n",
+       " ' Music: ALONE TRIP, REBEL AIRPORT',\n",
+       " ' New: ATTRACTION NEWTON, CHINATOWN GLADIATOR',\n",
+       " ' Sci-Fi: DAISY MENAGERIE, SOLDIERS EVOLUTION',\n",
+       " ' Sports: DRIVER ANNIE, RIDER CADDYSHACK',\n",
+       " ' Travel: BOONDOCK BALLROOM, LEATHERNECKS DWARFS']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actor_info.split(';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actor_info[Action] =  ANTITRUST TOMATOES, CLUELESS BUCKET\n",
+      "Actor_info[ Animation] =  CLASH FREDDY, INCH JET, SNOWMAN ROLLERCOASTER\n",
+      "Actor_info[ Children] =  CABIN FLASH, LEGALLY SECRETARY, MODEL FISH, SPLENDOR PATTON\n",
+      "Actor_info[ Classics] =  GALAXY SWEETHEARTS, STEEL SANTA\n",
+      "Actor_info[ Comedy] =  GROUNDHOG UNCUT, LIFE TWISTED, LION UNCUT\n",
+      "Actor_info[ Documentary] =  HOMEWARD CIDER, METAL ARMAGEDDON, WEDDING APOLLO\n",
+      "Actor_info[ Drama] =  TORQUE BOUND\n",
+      "Actor_info[ Family] =  LOLITA WORLD, SPLASH GUMP\n",
+      "Actor_info[ Foreign] =  FRIDA SLIPPER\n",
+      "Actor_info[ Games] =  GRINCH MASSAGE, MOONWALKER FOOL\n",
+      "Actor_info[ Horror] =  MOTIONS DETAILS, ZHIVAGO CORE\n",
+      "Actor_info[ Music] =  ALONE TRIP, REBEL AIRPORT\n",
+      "Actor_info[ New] =  ATTRACTION NEWTON, CHINATOWN GLADIATOR\n",
+      "Actor_info[ Sci-Fi] =  DAISY MENAGERIE, SOLDIERS EVOLUTION\n",
+      "Actor_info[ Sports] =  DRIVER ANNIE, RIDER CADDYSHACK\n",
+      "Actor_info[ Travel] =  BOONDOCK BALLROOM, LEATHERNECKS DWARFS\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pair in actor_info.split(';'):\n",
+    "    key, value = pair.split(':')\n",
+    "    print('Actor_info[{}] = {}'.format(key, value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-a0ebae4c3ee4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md_actor_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactor_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-a0ebae4c3ee4>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md_actor_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactor_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "d_actor_info = {key: value for key, value in [ai actor_info.split(';')}"
+   ]
   }
  ],
  "metadata": {
