modified:   Basic/tips.ipynb

--- a/Basic/tips.ipynb
+++ b/Basic/tips.ipynb
@@ -286,24 +286,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_actor_info = {key.strip(): [v.strip() for v in value.split(',')] for key, value in [ai.split(':') for ai in actor_info.split(';')]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-a0ebae4c3ee4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md_actor_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactor_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-a0ebae4c3ee4>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md_actor_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactor_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Action': ['ANTITRUST TOMATOES', 'CLUELESS BUCKET'],\n",
+       " 'Animation': ['CLASH FREDDY', 'INCH JET', 'SNOWMAN ROLLERCOASTER'],\n",
+       " 'Children': ['CABIN FLASH',\n",
+       "  'LEGALLY SECRETARY',\n",
+       "  'MODEL FISH',\n",
+       "  'SPLENDOR PATTON'],\n",
+       " 'Classics': ['GALAXY SWEETHEARTS', 'STEEL SANTA'],\n",
+       " 'Comedy': ['GROUNDHOG UNCUT', 'LIFE TWISTED', 'LION UNCUT'],\n",
+       " 'Documentary': ['HOMEWARD CIDER', 'METAL ARMAGEDDON', 'WEDDING APOLLO'],\n",
+       " 'Drama': ['TORQUE BOUND'],\n",
+       " 'Family': ['LOLITA WORLD', 'SPLASH GUMP'],\n",
+       " 'Foreign': ['FRIDA SLIPPER'],\n",
+       " 'Games': ['GRINCH MASSAGE', 'MOONWALKER FOOL'],\n",
+       " 'Horror': ['MOTIONS DETAILS', 'ZHIVAGO CORE'],\n",
+       " 'Music': ['ALONE TRIP', 'REBEL AIRPORT'],\n",
+       " 'New': ['ATTRACTION NEWTON', 'CHINATOWN GLADIATOR'],\n",
+       " 'Sci-Fi': ['DAISY MENAGERIE', 'SOLDIERS EVOLUTION'],\n",
+       " 'Sports': ['DRIVER ANNIE', 'RIDER CADDYSHACK'],\n",
+       " 'Travel': ['BOONDOCK BALLROOM', 'LEATHERNECKS DWARFS']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d_actor_info = {key: value for key, value in [ai actor_info.split(';')}"
+    "d_actor_info"
    ]
   }
  ],
